# port-knocking-tool

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  VPNConnect.spec  cleanup.sh  config.json  find_duplicates.sh  fix_all_imports.py  fix_imports.py  main.py  migrate.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_port_knocker.py
.github/workflows/: ci.yml  codeql-analysis.yml  wiki-sync.yml
archive/: README.md
docs/: ARCHITECTURE.md  Guia_De_Pruebas_E2E.md  Manual_Administrador_2FA.md  Manual_Usuario_Final.md
docs/wiki/: Arquitectura-del-Proyecto.md  Guia-de-Contribucion.md  Home.md  Manual-Administrador.md  Manual-Usuario-Final.md  architecture.md  testing.md
docs/wiki_content/: Arquitectura-del-Proyecto.md  Guia-de-Contribucion.md  Home.md
dummies/: config.json  dummy_knocker.py  gui_main_dummy.py  openvpn_dummy.py
manual_tests/: test_config_manager.py
reports/: unused_report.json  unused_report.txt  unused_report_src.json  unused_report_src.txt  unused_report_src_annotated.txt
scripts/: build_all.sh  check_health.sh  e2e_test_knockd.py  generate_wiki_toc.py  pin_requirements.sh
src/: __init__.py  config.json  configurador_config.py  credentials.txt  gui_main.py  importar_ovpn.py  main.py  profile.ovpn  server_knock.py  test_knockd_server.py
src/cli/: __init__.py  configurador_config.py
src/core/: __init__.py  config_manager.py  port_knocker.py  vpn_manager.py
tests/: __init__.py  conftest.py  test_port_knocker.py
tools/: find_unused.py  find_unused_src.py
(+39 files in other folders)
